--- a/src/index.css
+++ b/src/index.css
@@ -15,11 +15,11 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: #0d9488; /* match professional teal */
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  color: #0f766e;
 }
 
 body {
@@ -47,7 +47,7 @@ button {
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
+  border-color: #0d9488;
 }
 button:focus,
 button:focus-visible {
